# agniwatch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: test.yml
.streamlit/: config.toml
core/: airquality.py  alerting.py  classification.py  config.py  emissions.py  firms.py  gee_auth.py  indices.py  preprocessing.py
docs/: DEPLOYMENT.md  government_guide.md  methodology.md
notebooks/: agniwatch_full_pipeline.ipynb
regions/: india_maharashtra.yaml  india_punjab_haryana.yaml  template.yaml  thailand_central.yaml
tests/: test_emissions.py  test_indices.py
